tests/invalid/list_pop_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [1, 2, 3]

    xs.pop(0)

if __name__ == "__main__":
    run_case()
